--- a/src/js/compoents/dialog/dialog.less
+++ b/src/js/compoents/dialog/dialog.less
@@ -3,4 +3,94 @@
 	width: 100%;
 	height: 100%;
 	background: rgba(0, 0, 0, 0.5);
+	top: 0;
+	left: 0;
+}
+.dialog__wrapper {
+	position: relative;
+	margin: 50px auto;
+	width: 260px;
+	height: 300px;
+	background: #fff;
+	// border: 1px solid #ccc;
+	position: relative;
+}
+
+/**
+ * userForm
+ */
+.userForm {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 50px;
+	padding: 50px 20px;
+}
+.form__wrapper {
+
+}
+.form__wrapper__item {
+	width: 100%;
+	height: 40px;
+	label {
+		display: inline-block;
+		width: 30%;
+		font-size: 12px;
+		padding-right: 10%;
+		text-align: right;
+	}
+	input {
+		width: 60%;
+		box-sizing: border-box;
+	}
+}
+
+.sideBar {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 30px;
+	height: 100%;
+	font-size: 12px;
+	color: green;
+	text-align: center;
+}
+
+.sideBar__item {
+	width: 100%;
+	height: 50%;
+	padding: 60px 8px;
+	box-sizing: border-box;
+	&.active {
+		background: green;
+		color: #fff;
+	}
+}
+
+.closeBtn {
+	position: absolute;
+	top: -36px;
+	right: -5px;
+	width: 25px;
+	height: 25px;
+	line-height: 25px;
+	text-align: center;
+	color: #fff;
+	// background: #fff;
+	border-radius: 30px;
+	border: 1px solid #fff;
+	&:after {
+		content: '';
+		border-left: 1px solid #fff;
+		height: 10px;
+		width: 0;
+		position: absolute;
+		bottom: -10px;
+		left: 13px;
+	}
+	&:before {
+		content: '+';
+		display: block;
+		transform:rotate(45deg);
+	}
 }
