--- a/f2e/src/js/compoents/dialog/dialog.less
+++ b/f2e/src/js/compoents/dialog/dialog.less
@@ -48,7 +48,7 @@
 .form__wrapper__button {
 	width: 100px;
 	height: 30px;
-	background: green;
+	background: #319382;
 	color: #fff;
 	text-align: center;
 	line-height: 30px;
@@ -64,7 +64,7 @@
 	width: 30px;
 	height: 100%;
 	font-size: 12px;
-	color: green;
+	color: #319382;
 	text-align: center;
 }
 
@@ -74,7 +74,7 @@
 	padding: 60px 8px;
 	box-sizing: border-box;
 	&.active {
-		background: green;
+		background: #319382;
 		color: #fff;
 	}
 }
