--- a/f2e/src/js/compoents/foot/foot.less
+++ b/f2e/src/js/compoents/foot/foot.less
@@ -9,7 +9,7 @@
 		cursor: pointer;
 		width: 70px;
 		height: 25px;
-		background: green;
+		background: #319382;
 		margin: 25px auto;
 		text-align: center;
 		line-height: 25px;
