--- a/f2e/src/js/compoents/map/map.less
+++ b/f2e/src/js/compoents/map/map.less
@@ -9,3 +9,15 @@
 		height: 100%;
 	}
 }
+
+.mock {
+  position: absolute;
+  top: 75px;
+  bottom: 75px;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.1);
+  #mock {
+	width: 100%;
+	height: 100%;
+  }
+}
